--- a/WebApplication8/AppDBConnection/Site.Master
+++ b/WebApplication8/AppDBConnection/Site.Master
@@ -52,7 +52,7 @@
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Home</a></li>
                         <li><a runat="server" href="~/Register">Register</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
+                        <li><a runat="server" href="~/Login">Login</a></li>
                     </ul>
                 </div>
             </div>
